--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,6 +4,9 @@
       "../docker-compose.yml",
       "docker-compose.extend.yml"
     ],
+    "extensions": [
+      "ms-vscode.go"
+    ],
     "service": "app",
     "workspaceFolder": "/work",
     "shutdownAction": "stopCompose"
