--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
     app:
-        image: golang:1.13
+        build: .
         working_dir: /work
         tty: true
         ports:
@@ -9,4 +9,4 @@ services:
         volumes:
             - ./:/work
         environment:
-            PORT: 8000
+            - PORT=8000
